[package]
name = "egui-tetra"
version = "0.1.0"
authors = ["Andrew Minnich <aminnich3@gmail.com>"]
edition = "2018"
license = "MIT"
description = "egui integration for Tetra"
repository = "https://github.com/tesselode/egui-tetra"
keywords = ["gamedev", "gui"]
categories = ["game-development", "gui"]

[dependencies]
copypasta = "0.7.1"
egui = "0.12.0"
open = "1.7.0"
tetra = { version = "^0.6.1", default-features = false }
